--- a/src/app/component/post-rennen-game/post-rennen-game.component.html
+++ b/src/app/component/post-rennen-game/post-rennen-game.component.html
@@ -1,1 +1,4 @@
-<canvas #game></canvas>
+<!-- post-rennen-game.component.html -->
+<div class="canvas-container">
+  <canvas #game></canvas>
+</div>
