--- a/src/app/component/post-rennen-game/post-rennen-game.component.css
+++ b/src/app/component/post-rennen-game/post-rennen-game.component.css
@@ -1,12 +1,11 @@
-/* post-rennen-game.component.css */
 .canvas-container {
   width: 100%;
   height: 100%;
-  overflow: hidden; /* Impedisce lo scrolling */
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
 
 canvas {
-  display: block; /* Assicura che il canvas si adatti correttamente al contenitore */
+  display: block;
 }
